# The-Document-Intelligence-Refinery

./: .gitignore  DOMAIN_NOTES.md  README.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.docx  app.py  cli_query.py  generate_manifest.py  models.py  pyproject.toml  research_density.py  run_refinery.py  setup_project.py  triage_agent.py  triage_manifest.json
.refinery/: _single_doc_run.py  extraction_ledger.jsonl  fact_store.db
.refinery/pageindex/: Annual_Report_JUNE-2021.json  Annual_Report_JUNE-2023.json  Audit_Report_-_2023.json  CBE_ANNUAL_REPORT_2023-24.json  CBE_Annual_Report_2011-12.json  ETS-Annual-Report-2023_2024.json  Research_summary_and_Architectural_approach_-_project_chimera.json  Security_Vulnerability_Disclosure_Standard_Procedure_1.json  TRP1_Challenge_Week_2__The_Automaton_Auditor.json  TRP1___Week_2_Delivery_-_Exercise_2_-_Asking_Good_Questions_in_an_AI-First_Work_Environment.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
.refinery/profiles/: 2019_Audited_Financial_Statement_Report_refined.json  2022_Audited_Financial_Statement_Report_refined.json  Annual_Report_JUNE-2021_refined.json  Annual_Report_JUNE-2023_refined.json  Audit Report - 2023_refined.json  CBE ANNUAL REPORT 2023-24_refined.json  CBE Annual Report 2011-12_refined.json  (+12 more)
data/: README.md
rubric/: extraction_rules.yaml
scripts/: build_vector_db.py  test_vector_store.py
tests/: test_chunker.py  test_confidence.py  test_extractor_router.py  test_indexer.py  test_qa_agent.py  test_triage.py  test_triage_advanced.py
(+14 files in other folders)
